name:                CISExplorer

version:             0.1.0.0

synopsis:            A caching database for the UIUC Course Explorer API

description:         This program retrieves data from the UIUC Course Explorer API (

homepage:            https://github.com/taktoa/CISExplorer

license:             GPL-3

license-file:        LICENSE

author:              Remy Goldschmidt

maintainer:          taktoa@gmail.com

category:            Web

build-type:          Simple

cabal-version:       >=1.10

source-repository head
    type:            git
    location:        https://github.com/taktoa/CISExplorer

executable CISExplorer
  main-is:             Main.hs
  --  default-extensions: BangPatterns, OverloadedStrings, TupleSections
  build-depends:       base < 5, hxt
  -- build-depends:       base < 5, scotty, acid-state, hxt
  hs-source-dirs:      src
  default-language:    Haskell2010
  

